--- a/.github/workflows/check_regex_examples.yml
+++ b/.github/workflows/check_regex_examples.yml
@@ -52,3 +52,30 @@ jobs:
         go run exampleMatcher.go
     
     
+    - name: Build Rex Client for Linux
+      run: |
+        cd clients/go
+        GOOS=linux GOARCH=amd64 go build -o rex-linux-amd64
+      if: success()
+
+    - name: Build Rex Client for macOS
+      run: |
+        cd clients/go
+        GOOS=darwin GOARCH=amd64 go build -o rex-darwin-amd64
+      if: success()
+
+    - name: Build Rex Client for Windows
+      run: |
+        cd clients/go
+        GOOS=windows GOARCH=amd64 go build -o rex-windows-amd64.exe
+      if: success()
+
+    - name: Upload Artifacts
+      id: upload-artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: rex-artifacts
+        path: |
+          clients/go/rex-linux-amd64
+          clients/go/rex-darwin-amd64
+          clients/go/rex-windows-amd64.exe
